unpackaged/main/default/objects/n2de__cls_Match_log__c/n2de__cls_Match_log__c.object-meta.xml
<CustomObject>
    <label>Classifier matching log</label>
    <nameField>
        <label>Classifier matching log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier matching logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>