unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Account_contact_rule__c.field-meta.xml
<CustomField>
    <fullName>n2de__Account_contact_rule__c</fullName>
    <label>Account or Contact matching rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>