unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Error_message__c.field-meta.xml
<CustomField>
    <fullName>n2de__Error_message__c</fullName>
    <label>Error message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>