unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__In_error__c.field-meta.xml
<CustomField>
    <fullName>n2de__In_error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if an error occurred while trying to match this record to a territory</description>
    <label>In error</label>
    <type>Checkbox</type>
</CustomField>