unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Last_processed_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_processed_datetime__c</fullName>
    <label>Last processed datetime</label>
    <type>DateTime</type>
</CustomField>