unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Lead_confidence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lead_confidence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead match confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>