unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Lead_rule__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lead_rule__c</fullName>
    <label>Lead matching rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>