unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Matched_account_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_account_id__c</fullName>
    <label>Matched Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>