unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Matched_account_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_account_type__c</fullName>
    <description>The type of the matched account</description>
    <externalId>true</externalId>
    <label>Matched account type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>