unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Matched_lead_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_lead_name__c</fullName>
    <label>Matched lead name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>