unpackaged/main/default/objects/n2de__cls_Match_log__c/fields/n2de__Number_of_attempts__c.field-meta.xml
<CustomField>
    <fullName>n2de__Number_of_attempts__c</fullName>
    <label>Number of saving attempts made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>